--- a/pages/display/display.wxss
+++ b/pages/display/display.wxss
@@ -47,22 +47,23 @@
 }
 .spin-article{
     width: 100%;
-    height: 200px;
+    height: 300px;
     position: relative;
     border: 0px solid #eee;
     text-align: center;
     box-sizing: border-box;
 }
 .weui-button{
-  margin: 30rpx 0 30rpx 80rpx;
+  margin: 20rpx 0 20rpx 50rpx;
   color: #FFFFFF;
   background-color: #0099FF;
   border-color: #0099FF;
-  width:600rpx;
+  width:300rpx;
   height:110rpx;
   border-radius: 30px;
   font-size:36rpx;
   line-height:50px;
+  float:left;
 }
 .weui-cell {
   padding: 10px 15px;
