--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -2,7 +2,7 @@
   <i-input value="{{ orderNo }}" title="订单号:" disabled />
   <i-input value="{{pol}}" title="起运港:" disabled />
   <i-input value="{{pod}}" title="目的港:" disabled />
-  <i-input value="{{date}}" title="船期:" disabled />
+  <i-input value="{{voyageNo}}" title="船期:" disabled />
 </view>
 <i-steps current="{{current}}" direction="vertical">
   <view wx:for="{{queryList}}" wx:key="{{item.seqNum}}">
