--- a/pages/display/display.wxml
+++ b/pages/display/display.wxml
@@ -35,7 +35,10 @@
     </view>
     <scroll-view scroll-x="true" scroll-y="true" bindscroll="scroll" style="width: 100%">
     <view class="spin-article">
-    <view class="tr bg-g" wx:for="{{queryList}}" wx:key="{    {item.tariffId}}">
+    <view hidden='{{noQuery}}' class="tr bg-g">
+      <view class="td">暂无数据</view>
+    </view>
+    <view class="tr bg-g" wx:for="{{queryList}}" wx:key="{{item.tariffId}}">
       <view class='td'> {{item.cbm}} </view>
       <view class="td"> {{item.ton}} </view>
       <view class="td"> {{item.via}} </view>
