--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -1,9 +1,10 @@
-<view class="one-tag">
+<view class="one-tag"> 
   <i-input value="{{ orderNo }}" title="订单号:" disabled />
   <i-input value="{{pol}}" title="起运港:" disabled />
   <i-input value="{{pod}}" title="目的港:" disabled />
   <i-input value="{{voyageNo}}" title="船期:" disabled />
 </view>
+<view hidden='{{noQuery}}'>{{msg}}</view>
 <i-steps current="{{current}}" direction="vertical">
   <view wx:for="{{queryList}}" wx:key="{{item.seqNum}}">
     <i-step>
