--- a/pages/orders/orders.wxml
+++ b/pages/orders/orders.wxml
@@ -20,7 +20,7 @@
   <scroll-view scroll-x="true" scroll-y="true" bindscroll="scroll" style="width: 100%">
   <view class="spin-article">
   <view hidden='{{noQuery}}' class="tr bg-g">
-    <view class="td">暂无数据</view>
+    <view class="td">{{msg}}</view>
   </view>
   <view class="tr bg-g" wx:for="{{queryList}}" wx:key="{{item.orderNo}}" bindtap='orderDetail' data-name='{{item.orderNo}}'>
     <view class='td'> {{item.orderNo}} </view>
