--- a/pages/display/display.wxss
+++ b/pages/display/display.wxss
@@ -1,4 +1,25 @@
 /* pages/display/display.wxss */
+.page-body{
+  margin: 20rpx 10rpx 0 10rpx;
+  background: #fff;
+  border-radius: 6rpx;
+  margin-top:50rpx;
+  position:relative;
+  box-shadow:0 5px 5px rgba(0,0,0,.2);
+}
+.page-section{
+  margin: 30rpx 0 30rpx 0;
+}
+.searchTime{
+  height: 320rpx;
+}
+.title{
+  background:#0099FF;
+  text-align: center;
+  color: #FFFFFF;
+  line-height:50px;
+  margin-bottom: -50rpx;
+}
 .image {
   margin-top: 10rpx;
   width: 740rpx;
@@ -29,6 +50,9 @@
 .td {
   width:40%;
   text-align: center;
+  font-size: 25rpx;
+  white-space:nowrap;
+  word-break:keep-all;
 }
 .bg-w{
   background: snow;
@@ -44,26 +68,25 @@
   display: flex;
   height: 3rem;
   align-items: center;
+  font-size: 35rpx;
 }
 .spin-article{
-    width: 100%;
-    height: 300px;
-    position: relative;
-    border: 0px solid #eee;
-    text-align: center;
-    box-sizing: border-box;
-}
+  width: 100%;
+  height: 300px;
+  position: relative;
+  border: 0px solid #eee;
+  text-align: center;
+  box-sizing: border-box;
+} 
 .weui-button{
-  margin: 20rpx 0 20rpx 50rpx;
-  color: #FFFFFF;
-  background-color: #0099FF;
-  border-color: #0099FF;
-  width:300rpx;
-  height:110rpx;
-  border-radius: 30px;
-  font-size:36rpx;
-  line-height:50px;
-  float:left;
+  margin: 20rpx 90rpx 20rpx 90rpx;
+  font-size:30rpx;
+  line-height:32px;
+  width: 120px;
+  height: 35px;
+}
+.nowrap{
+  float: left;
 }
 .weui-cell {
   padding: 10px 15px;
