--- a/pages/query/query.wxss
+++ b/pages/query/query.wxss
@@ -1,21 +1,42 @@
 /* pages/query/query.wxss */
+page{
+  background: #f5f5f5;
+}
 .image {
-  margin-top: 10rpx;
-  width: 740rpx;
-  height: 150rpx;
+  margin: 50rpx 0 50rpx 0;
+  width: 100%;
+  height: 130rpx;
 }
 .weui-input {
   width: 100%;
   height: 2.58823529em;
   min-height: 2.58823529em;
   line-height: 2.58823529em;
-  border: 1rpx solid #D9D9D9;
+  border-bottom: 1rpx solid #D9D9D9;
+}
+.page-body{
+  margin: 20rpx 10rpx 0 10rpx;
+  background: #fff;
+  border-radius: 6rpx;
+  padding:20rpx 20rpx 20rpx 20rpx;
+  margin-top:50rpx;
+  position:relative;
+  box-shadow:0 5px 5px rgba(0,0,0,.2);
 }
 .page-section{
-  margin-bottom: 20rpx;
+  margin: 30rpx 0 30rpx 0;
+}
+.title{
+  background:#0099FF;
+  text-align: center;
+  color: #FFFFFF;
+  line-height:50px;
+  margin-bottom: -50rpx;
 }
 .weui-button{
-  margin-top: 20rpx;
+  margin: auto;
+  margin-top: 50rpx;
+  margin-bottom: 50rpx;
   color: #FFFFFF;
   background-color: #0099FF;
   border-color: #0099FF;
@@ -24,4 +45,13 @@
   border-radius: 30px;
   font-size:36rpx;
   line-height:50px;
+}
+.shadow{
+  background: #fff;
+  border-radius: 6rpx;
+  padding:20rpx;
+  margin:10rpx;
+  margin-top:50rpx;
+  position:relative;
+  box-shadow:0 5px 5px rgba(0,0,0,.2);
 }
